--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
   },
   "dependencies": {
     "axios": "^1.2.1",
-    "core-js": "^3.8.3",
-    "element-plus": "^2.2.27",
+    "core-js": "3.24.1",
+    "element-plus": "2.2.12",
+    "monaco-editor": "^0.34.1",
+    "monaco-editor-webpack-plugin": "^7.0.1",
+    "sortablejs": "^1.15.0",
     "vue": "^3.2.45",
     "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.0.3",
+    "vue-router": "4.1.3",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@types/sortablejs": "^1.15.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
