--- a/.env.production
+++ b/.env.production
@@ -5,4 +5,4 @@ NODE_ENV = production
 VUE_APP_TITLE = Generator
 
 # 接口地址
-VUE_APP_API_BASEURL = "http://localhost:8088"
+VUE_APP_API_BASEURL = "http://43.139.4.6:5432"
